<resources>
    <string name="app_name">Alyusra</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_post">Post order</string>
    <string name="text_check">check order</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="product1">1.</string>
    <string name="product2">2.</string>
    <string name="product3">3.</string>
    <string name="order">Make Order</string>
    <string name="table">table number</string>
    <string name="Check">Check</string>
    <string name="mobileNotification">Notification phone No.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Enter phone number</string>
    <string name="phone_">072xxxxxx</string>
    <string name="amount">Amount</string>
    <string name="pay">Pay</string>
    <string name="login">Login</string>
    <string name="paybill">Select Paybill</string>
    <string name="title_activity_login">Sign in</string>
    <string name="order_number">Order</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="planets_array">
        <item>Chapati + Beaf</item>
        <item>Ugali + Beaf</item>
        <item>pilau</item>
        <item>arosto</item>
        <item>Tea</item>
        <item>Tea Masala</item>
        <item>Coffee</item>
        <item>Milk</item>
    </string-array>
</resources>
