<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.glackemi.alyusra.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_payme"
            android:layout_width="120sp"
            android:layout_height="118sp"
            android:text="Hello World!"
            />
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="20sp"
            android:layout_height="20sp" />



        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="250sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/paybill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:padding="3dp"
                android:background="@drawable/rectangle_background"
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <TextView
                android:layout_marginTop="7dp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/phone"
                android:background="@drawable/rectangle_background"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:padding="10dp"
                android:hint="@string/phone_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="7dp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/amount"
                android:background="@drawable/rectangle_background"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:padding="10dp"
                android:hint="@string/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/pay"
                android:layout_marginTop="7dp"
                android:text="@string/pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/qr"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/qr" />
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/more"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_balance_wallet" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:src="@drawable/powerby" />

    </LinearLayout>
</FrameLayout>
