<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.glackemi.alyusra.MakeOrder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120sp"
            android:layout_height="118sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/logo_payme"
            android:text="Hello World!" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="250sp"
            android:layout_height="337dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/product1"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_background"
                android:padding="3dp">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="41dp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:padding="5dp"
                android:text="@string/product2"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_background"
                android:padding="3dp">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="44dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:padding="5dp"
                android:text="@string/product3"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/rectangle_background"
                android:padding="3dp">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:padding="5dp"
                android:text="@string/table"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/table"
                android:background="@drawable/rectangle_background"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:padding="10dp"
                android:hint="@string/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/order" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:src="@drawable/powerby" />

    </LinearLayout>
</FrameLayout>




