<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nouveta.payme.MainActivity">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:visibility="visible"
        android:layout_gravity="center"
        android:background="@drawable/logo_payme"
        android:layout_width="120sp"
        android:layout_height="118sp"
        android:text="Hello World!"
       />



    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="200sp"
        android:layout_height="wrap_content">


        <TextView
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/mobileNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/mobileNotification"
            android:background="@drawable/rectangle_background"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="5dp"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




        <TextView
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username"
            android:background="@drawable/rectangle_background"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="5dp"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:background="@drawable/rectangle_background"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:padding="5dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>



</ScrollView>
